sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:9: error: not found: value i
    if (!plusPetit(i,i+1)) {
                   ^AlgCocktailSort2:9: error: not found: value i
    if (!plusPetit(i,i+1)) {
                     ^AlgCocktailSort2:10: error: not found: value i
      echange(i,i+1)
              ^AlgCocktailSort2:10: error: not found: value i
      echange(i,i+1)
                ^