sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.code
def cocktailSort2() {
  
  var debut=0
  var fin=getNombreValeurs()-2
  
  
  for(k<-debut to fin) {
    if (!plusPetit(i,i+1)) {
      echange(i,i+1)
      fin-=1
    }
  }
  for (j<-fin to debut by -1) {
    if (!plusPetit(j,j+1)) {
      echange(j,j+1)
      debut+=1
    }
  }
  
}